--- a/.github/workflows/continuousIntegration.yml
+++ b/.github/workflows/continuousIntegration.yml
@@ -13,4 +13,12 @@ jobs: # job to execute
     - name: Print hello
       run: | # run terminal command
         ls
-        echo Hello!!
+        echo Hello!
+        
+    - name: Setup Go
+      uses: actions/setup-go@v3.2.0
+      with:
+        go-version: 1.18
+    - name: Check Go Version
+      run: go version
+    
