--- a/.github/workflows/continuousDelivery.yml
+++ b/.github/workflows/continuousDelivery.yml
@@ -11,6 +11,18 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2.4.2
+    
+      - name: Setup Go
+        uses: actions/setup-go@v3.2.0
+        with:
+          go-version: 1.18
+      - name: Check Go Version
+        run: go version
+
+      - name: Install dependencies
+        run: |
+          go mod init calc # Add go mod and go sum file. So when we use go build, we can omit line 33 - 35
+          go mod tidy
         
       - name: Run GoReleaser # https://github.com/goreleaser/goreleaser-action
         uses: goreleaser/goreleaser-action@v3
